--- a/index.html
+++ b/index.html
@@ -4,63 +4,45 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style/style.css">
+    <link rel="stylesheet" href="src/style/responsive.css">
     <title>Portofolio Saya</title>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top" font-color="white">
-        <div class="right-header">
-          <h3>My Portfolio</h3>
-        </div>
-        <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#aboutme">Tentang Saya<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#profile">Portofolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Kontak</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      
     </header>
     <main>
       <div class="personal" id="aboutme">
-          <aside class="card about">
-            <div class="abt">
-              <img class="ftprofile" src="./src/assets/figure.jpg" width="60%">
+          <div class="card about">
+            <div class="ftprofile">
+              <img src="src/assets/figure.jpg" width="20%" alt="Figure">
             </div>
-            <div class="ceritaku">
+            <div class="features ceritaku">
               <h4>Tentang Saya</h4>
               <p>Hallo! Perkenalkan, saya M NUR SEPTIAN. Saya lulusan S1 jurusan Teknik Informatika. Saya sangat menyukai belajar hal-hal baru dan tantangan terutama pada bidang IT. Namun, tidak menutup kemungkinan untuk mempelajari hal-hal baru selain bidang IT. Saya termasuk orang yang mudah beradaptasi dengan lingkungan baru, dapat bekerja sendiri maupun team, dan memiliki motivasi yang tinggi dalam bekerja. </p>
             </div>
-          </aside>
-
-        <div class="content">
-          <div class="card biodata" id="aboutme">
-            <table cellpadding="0">
-              <tbody>
-                <tr>
-                  <td><b>Tempat Lahir:</b></td>
-                  <td>Jakarta</td>
-                </tr>
-                <tr>
-                  <td><b>Tanggal Lahir :</b></td>
-                  <td>16 September 1995</td>
-                </tr>
-                <tr>
-                  <td><b>Agama :</b></td>
-                  <td>Islam</td>
-                </tr>
-              </tbody>
-
-            </table>
+            <div class="features biodata">
+              <table cellpadding="0">
+                <tbody>
+                  <tr>
+                    <td><b>Tempat Lahir:</b></td>
+                    <td>Jakarta</td>
+                  </tr>
+                  <tr>
+                    <td><b>Tanggal Lahir :</b></td>
+                    <td>16 September 1995</td>
+                  </tr>
+                  <tr>
+                    <td><b>Agama :</b></td>
+                    <td>Islam</td>
+                  </tr>
+                </tbody>
+  
+              </table>
+            </div>
           </div>
-        </div>
       </div>
       <div class="content-profiles">
         <div class="profiles">
