--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style/style.css">
     <link rel="stylesheet" href="src/style/responsive.css">
     <title>Portofolio Saya</title>
@@ -107,6 +107,18 @@
         </div>
         <div class="card sertificate">
           <h3 class="headline">PELATIHAN & SERTIFIKASI</h3>
+          <ul class="data-list">
+            <li>Belajar Dasar Pemrograman Web</li>
+            <li>Dicoding 2020</li>
+          </ul>
+          <ul class="data-list">
+            <li>Belajar Fundamental Front End Web Developer</li>
+            <p>Dicoding 2020</p>
+          </ul>
+          <ul class="data-list">
+            <li>Program Online Academy HTML, CSS, Javascript</li>
+            <li>Digital Talent Scholarship 2020</li>
+          </ul>
         </div>
         </div>
       </div>
