--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style/style.css">
     <link rel="stylesheet" href="src/style/responsive.css">
@@ -37,23 +37,26 @@
           <img src="src/assets/figure.jpg" alt="Figure">
         </div>
           <div class="ceritaku">
-            <h4 class="headline">TENTANG SAYA</h4>
+            <h3 class="headline">TENTANG SAYA</h3>
             <p>Hallo! Perkenalkan, saya M NUR SEPTIAN. Saya lulusan S1 jurusan Teknik Informatika. Saya sangat menyukai belajar hal-hal baru dan tantangan terutama pada bidang IT. Namun, tidak menutup kemungkinan untuk mempelajari hal-hal baru selain bidang IT. Saya termasuk orang yang mudah beradaptasi dengan lingkungan baru, dapat bekerja sendiri maupun team, dan memiliki motivasi yang tinggi dalam bekerja. </p>
           </div>
         <div class="biodata">
           <table cellpadding="0">
             <tbody>
               <tr>
-                <td><b>Tempat Lahir:</b></td>
-                <td>Jakarta</td>
+                <td><b>Tempat Lahir</b></td>
+                <td>:</td>
+                <td> Jakarta</td>
               </tr>
               <tr>
-                <td><b>Tanggal Lahir :</b></td>
-                <td>16 September 1995</td>
+                <td><b>Tanggal Lahir</b></td>
+                <td>:</td>
+                <td> 16 September 1995</td>
               </tr>
               <tr>
-                <td><b>Agama :</b></td>
-                <td>Islam</td>
+                <td><b>Agama</b></td>
+                <td>:</td>
+                <td> Islam</td>
               </tr>
             </tbody>
           </table>
@@ -109,16 +112,16 @@
           <h3 class="headline">PELATIHAN & SERTIFIKASI</h3>
           <ul class="data-list">
             <li>Belajar Dasar Pemrograman Web</li>
-            <li>Dicoding 2020</li>
           </ul>
+          <p class="sertifikat">Dicoding - 2020</p>
           <ul class="data-list">
             <li>Belajar Fundamental Front End Web Developer</li>
-            <p>Dicoding 2020</p>
           </ul>
+          <p class="sertifikat">Dicoding - 2020</p>
           <ul class="data-list">
             <li>Program Online Academy HTML, CSS, Javascript</li>
-            <li>Digital Talent Scholarship 2020</li>
           </ul>
+          <p class="sertifikat">Digital Talent Scholarship - 2020</p>
         </div>
         </div>
       </div>
@@ -126,6 +129,27 @@
       
     </main>
     <footer>
+      <h3 class="headline-footer">Contact Person</h3>
+      <div class="kontak">
+        <div class="alamat">
+          <ul class="data-contact">
+            <li><p><i class="fa fa-home" aria-hidden="true"></i> Kota Bekasi</p></li>
+            <li><p><i class="fa fa-envelope" aria-hidden="true"></i> verzchseptian@gmail.com</p></li>
+            <li><p><i class="fa fa-whatsapp" aria-hidden="true"></i> +6287877640848</p></li>
+          </ul>
+        </div>
+        <div class="sosmed">
+          <h3>Social Media</h3>
+          <ul class="data-contact social">
+            <li><a href="https://id.linkedin.com/in/m-nur-septian-7628b7154"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/septmns/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>Copyright 2020 ©<b>MNurSeptian</b>. All Rights Reserved</p>
+      </div>
     </footer>
     <script src="app.js"></script>
   </body>
