--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <div class="mbk">
               <p><b>PT. Mitra Buana Komputindo<br>Okt 2013 - Apr 2014 Technical Support</b><br>Contract</p>
             <ul class="data-list">
-              <li>Migrasi Email</li>
-              <li>migrasi</li>
+              <li>Melakukan data collect dan report PC user</li>
+              <li>Melakukan aktivitas migrasi domain user (rollout)</li>
             </ul>
             </div>
             
@@ -96,7 +96,7 @@
                 <img src="./src/assets/logo-andra.png" width="50%" alt="Andra7208">
             </div>
             <div class="andra">
-              <p><b>Andra7208 Computer<br>Nov 2015 - Sep2019 IT Support</b><br>Freelance</p>
+              <p><b>Andra7208 Computer<br>Nov 2015 - Sep 2019 IT Support</b><br>Freelance</p>
                 <ul class="data-list">
                   <li>Service dan Maintenance Komputer Customer pada Hardware dan Software</li>
                 </ul>
